# GarudaSDLC

./: .gitignore  README.md  docker-compose.yml  github-project-api.md
aws/: README.md  setup-eventbridge-role.sh
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthButtons.tsx  Header.tsx  ProtectedRoute.tsx
frontend/src/config/: api.ts  cognito.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Home.tsx  Login.tsx  NotFound.tsx  ProjectDetail.tsx  Projects.tsx  RequirementGathering.tsx  Workspaces.tsx
frontend/src/services/: index.ts  projectService.ts  workspaceService.ts
frontend/src/store/: hooks.ts  index.ts  projectSlice.ts  workspaceSlice.ts
frontend/src/types/: index.ts
services/: github_project_tools.py
services/core/: .env.example  custom_serializer.py  docker-compose.yml  main.py  pyproject.toml
services/garuda_api/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/garuda_api/core/: auth.py  database.py  models.py
services/garuda_api/routes/: __init__.py  chat.py  custom_requirements.py  meetings.py  projects.py  schedules.py  workspaces.py
services/garuda_api/schemas/: __init__.py
services/requirement_gathering/: .gitignore  README.md  main.py  pyproject.toml
services/requirement_gathering/core/: database.py  models.py
services/requirement_gathering/routes/: __init__.py  custom_requirements.py  meetings.py  requirements.py  schedules.py  videos.py  webhooks.py
services/requirement_gathering/schemas/: __init__.py
services/requirement_gathering/scripts/: README.md  cleanup_and_recreate_index.sh  cleanup_dev_data.py  create_vector_index.sh  delete_vector_index.py  delete_vectors_cli.sh  full_index_delete.sh  inspect_vector_index.sh  migrate_add_custom_requirements.py  migrate_add_total_chunks_to_meetings.py  migrate_downloads_to_s3.py  migrate_s3_columns.py  setup_s3_buckets.sh  setup_s3_cors.sh
services/requirement_gathering/tests/: test_chunking_output.py  test_vector_store.py
services/requirement_gathering/utils/: __init__.py  eventbridge.py  s3_storage.py  text_extraction.py  vector_store.py
