[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.10",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.4.16",
    "langgraph-checkpoint-sqlite>=2.0.2",
    "python-dotenv>=1.2.2",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.1.0",
]
