[project]
name = "sdlc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "openai-whisper>=20231117",
]
